Export recent changes to GitHub.